# vqsort-rs

./: Cargo.toml  LICENSE  LICENSE-BSD3  README.md  build.rs
src/: lib.rs  vqsort.cpp
tests/: test.rs
