[package]
authors = ["lincot <lincot@disroot.org>"]
categories = ["algorithms"]
description = "Rust bindings for the Google Highway's vectorized quicksort"
edition = "2021"
keywords = ["fast", "simd", "sort", "sorting"]
license = "Apache-2.0 OR BSD-3-Clause"
name = "vqsort-rs"
repository = "https://github.com/lincot/vqsort-rs"
version = "0.2.0"

[dependencies]
paste = "1.0.15"
rustversion = "1.0.17"

[build-dependencies]
cc = "1.0.98"
system-deps = "6.2.2"

[dev-dependencies]
rand = { version = "0.8.5", default-features = false }
rand_pcg = "0.3.1"

[package.metadata.system-deps]
libhwy-contrib = "1"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
